Fixed z-index issue.

--- a/src/app/components/header/header.css
+++ b/src/app/components/header/header.css
@@ -7,6 +7,7 @@
     width: calc(100% - var(--margin-inline) * 2);
     height: var(--header-height);
     background-color: white;
+    z-index: 1;
 }
 
 .header .header-button{
